TestCases/Errors/Haversine/observations/sst/win_03_obs.spm
obs r14-c6 0.0012670329358426
obs r15-c6 0.0013237244461076
obs r16-c6 0.000528141135616515
obs r13-c7 0.000532336381640944
obs r14-c7 0.00105901524531225
obs r15-c7 0.00111688084444935
obs r16-c7 0.000792487013968685
obs r13-c8 0.000391873893417895
obs r14-c8 0.000957678960619229
obs r15-c8 0.000422350824067341
obs r6-c9 0.0032478077297824
obs r13-c9 1e-08
obs r14-c9 1e-08
obs r4-c11 0.00156372165754496
obs r5-c11 0.00151365381418614
obs r6-c11 0.00150678051230537
obs r3-c12 0.0121317157712305
obs r4-c12 0.0171017448363331
obs r5-c12 0.00146842878120411
obs r3-c13 0.0120063191153239
obs r4-c13 0.0177400305227599
obs r4-c14 0.0456737588652482
obs r5-c14 0.0533065583862508
obs r5-c15 0.0616925942341159
obs r6-c15 0.050964458967519
obs r5-c16 0.0533700819733144
obs r6-c16 0.0635403807194674
obs r6-c17 0.0810243504231048
obs r7-c17 0.0334949280154456
obs r8-c17 0.0381840048105833
obs r1-c18 0.0467964390823458
obs r2-c18 0.0291191059717728
obs r3-c18 0.00568942436412316
obs r4-c18 0.00522042344763943
obs r7-c18 0.0260575296108291
obs r1-c19 0.0605182580236367
obs r2-c19 0.0342166195009004
obs r4-c19 0.00628711142158575
obs r2-c20 0.00876696832579186
obs r3-c20 0.0104793931306553
obs r4-c20 0.0164621370847052
obs r1-c23 0.0243831640058055
obs r2-c23 0.0416218155723
obs r1-c24 0.0313642873169124
obs r3-c24 0.0105298353998583
obs r1-c25 0.0326332050850744
error_value r14-c6 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r13-c7 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r13-c8 0.2
error_value r14-c8 0.2
error_value r15-c8 0.2
error_value r6-c9 0.2
error_value r13-c9 0.2
error_value r14-c9 0.2
error_value r4-c11 0.2
error_value r5-c11 0.2
error_value r6-c11 0.2
error_value r3-c12 0.2
error_value r4-c12 0.2
error_value r5-c12 0.2
error_value r3-c13 0.2
error_value r4-c13 0.2
error_value r4-c14 0.2
error_value r5-c14 0.2
error_value r5-c15 0.2
error_value r6-c15 0.2
error_value r5-c16 0.2
error_value r6-c16 0.2
error_value r6-c17 0.2
error_value r7-c17 0.2
error_value r8-c17 0.2
error_value r1-c18 0.2
error_value r2-c18 0.2
error_value r3-c18 0.2
error_value r4-c18 0.2
error_value r7-c18 0.2
error_value r1-c19 0.2
error_value r2-c19 0.2
error_value r4-c19 0.2
error_value r2-c20 0.2
error_value r3-c20 0.2
error_value r4-c20 0.2
error_value r1-c23 0.2
error_value r2-c23 0.2
error_value r1-c24 0.2
error_value r3-c24 0.2
error_value r1-c25 0.2
